# LogEye

./: .gitignore  CHANGELOG.md  LICENSE  README.md  publish  publish.sh  pyproject.toml  release.sh
demo/: demo1.py  demo2.py  demo4.py  demo5.py  demo7.py  demo8.py  demo9.py  demo_dijkstra.py  demo_factorial.py  demo_file_and_filter.py  master_demo.py  playground.py
demos/: demo1.py  demo3.py  demo4.py  demo6.py  demo9.py  demo_dijkstra.py  demo_educational.py  demo_factorial.py  demo_file_and_filter.py  master_demo.py
logeye/: __init__.py  config.py  core.py  emmiter.py  formatting.py  pipe.py  wrappers.py
logeye/introspection/: __init__.py  ast.py  frames.py  templates.py
tests/: conftest.py  test_assignment.py  test_basic.py  test_class.py  test_config.py  test_decorator.py  test_edgecase.py  test_educational.py  test_formatting.py  test_functions.py  test_lambda.py  test_nested.py  test_object.py  test_pipe.py
