[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logeye"
version = "1.4.0"
description = "Frictionless runtime logging for Python variables and functions"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "MattFor", email = "mattfor@relaxy.xyz" }
]

license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/MattFor/LogEye"

[tool.setuptools.packages.find]
where = ["."]
include = ["logeye*"]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pytest>=9.0.2"
]

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"demos/*" = ["E731", "F841"]
"tests/*" = ["E731", "F841"]

[tool.ruff.lint.pycodestyle]
max-line-length = 90

[tool.basedpyright]
include = ["logeye"]
exclude = ["tests", "demos"]

reportPrivateUsage = false # We'll deal with this later methinks